--- a/admin.html
+++ b/admin.html
@@ -4,8 +4,8 @@
   <base href="/Redemo/">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Admin — Gift Submissions</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+  <title>MBS • Admin — Gift Submissions</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <style>
     table{width:100%;border-collapse:collapse;margin-top:12px}
@@ -15,80 +15,60 @@
   </style>
 </head>
 <body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <div class="brand">
-        <img src="assets/logo.png" class="logo" alt="logo">
-        <div class="brand-text">
-          <h1>Admin — Submissions</h1>
-          <p class="tagline">Local demo storage (browser)</p>
-        </div>
-      </div>
-      <div class="controls">
-        <a href="index.html" class="btn-link">Back to form</a>
-      </div>
+  <header class="mast">
+    <div class="mast-inner">
+      <a class="ghost-btn" href="index.html">← BACK</a>
+      <img class="mark" src="assets/logo.png" alt="MBS mark">
+      <span class="ghost-btn" aria-hidden="true"></span>
     </div>
   </header>
 
-  <main class="container main">
-    <section class="card">
-      <h3>Submissions</h3>
-      <p class="muted">Entries live in <code>localStorage</code> under key <code>mbs_gifts</code>. This is a static demo only.</p>
-      <div style="margin-top:12px;display:flex;gap:8px;align-items:center">
-        <button id="reload" class="btn-primary">Refresh</button>
-        <button id="export" class="btn-ghost">Export CSV</button>
-        <button id="clear" class="btn-ghost" style="color:#b00;border-color:#f2dede">Clear all</button>
-      </div>
-      <div id="tableWrap" style="margin-top:16px;overflow:auto">
-        <table id="subTable" aria-live="polite">
-          <thead>
-            <tr><th>#</th><th>Timestamp</th><th>Name</th><th>Email</th><th>Department</th><th>Gift</th><th>Remarks</th></tr>
-          </thead>
-          <tbody></tbody>
-        </table>
-      </div>
-    </section>
+  <main class="container card">
+    <h2>Submissions</h2>
+    <p class="muted">Local-only demo. Entries are in this browser’s <code>localStorage</code> under key <code>mbs_gifts</code>.</p>
+    <div class="controls" style="margin:8px 0 14px">
+      <button id="reload" class="btn">Refresh</button>
+      <button id="export" class="btn ghost">Export CSV</button>
+      <button id="clear" class="btn ghost danger">Clear all</button>
+    </div>
+    <div style="overflow:auto">
+      <table id="subTable" aria-live="polite">
+        <thead><tr><th>#</th><th>Timestamp</th><th>Name</th><th>Email</th><th>Department</th><th>Gift</th><th>Remarks</th></tr></thead>
+        <tbody></tbody>
+      </table>
+    </div>
   </main>
 
-  <footer class="site-footer"><div class="container"><small>Demo preview — local only</small></div></footer>
+  <footer class="footer"><div class="container"><small>Demo preview — local only</small></div></footer>
 
   <script>
-    function loadEntries(){
-      return JSON.parse(localStorage.getItem('mbs_gifts') || '[]');
-    }
-    function escapeHTML(s){ return (s||'').toString().replace(/[&<>]/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;'}[c])); }
-    function renderTable(){
-      const data = loadEntries();
-      const tbody = document.querySelector('#subTable tbody');
-      tbody.innerHTML = '';
+    function load(){ return JSON.parse(localStorage.getItem('mbs_gifts') || '[]'); }
+    function esc(s){ return (s||'').toString().replace(/[&<>]/g, m=>({'&':'&amp;','<':'&lt;','>':'&gt;'}[m])); }
+    function render(){
+      const data = load();
+      const tb = document.querySelector('#subTable tbody');
+      tb.innerHTML = '';
       data.forEach((r,i)=>{
         const tr = document.createElement('tr');
-        tr.innerHTML = `<td>${i+1}</td><td>${r.ts}</td><td>${escapeHTML(r.fullName)}</td><td>${escapeHTML(r.email)}</td><td>${escapeHTML(r.department)}</td><td>${escapeHTML(r.giftChoice)}</td><td>${escapeHTML(r.remarks||'')}</td>`;
-        tbody.appendChild(tr);
+        tr.innerHTML = `<td>${i+1}</td><td>${r.ts}</td><td>${esc(r.fullName)}</td><td>${esc(r.email)}</td><td>${esc(r.department)}</td><td>${esc(r.giftChoice)}</td><td>${esc(r.remarks||'')}</td>`;
+        tb.appendChild(tr);
       });
     }
-    document.getElementById('reload').addEventListener('click', renderTable);
-    document.getElementById('export').addEventListener('click', function(){
-      const data = loadEntries();
-      if(!data.length){ alert('No entries'); return; }
-      const lines = [];
-      lines.push(['timestamp','fullName','email','department','giftChoice','remarks'].join(','));
-      data.forEach(r=>{
-        const row = [r.ts, r.fullName||'', r.email||'', r.department||'', r.giftChoice||'', (r.remarks||'').replace(/\n/g,' ')]
-          .map(v => `"${String(v).replace(/"/g,'""')}"`).join(',');
-        lines.push(row);
-      });
-      const blob = new Blob([lines.join('\n')], {type:'text/csv;charset=utf-8;'});
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
+    document.getElementById('reload').addEventListener('click', render);
+    document.getElementById('export').addEventListener('click', ()=>{
+      const data = load(); if(!data.length){ alert('No entries'); return; }
+      const rows = [['timestamp','fullName','email','department','giftChoice','remarks']];
+      data.forEach(r=>rows.push([r.ts, r.fullName||'', r.email||'', r.department||'', r.giftChoice||'', (r.remarks||'').replace(/\n/g,' ')]));
+      const csv = rows.map(row=>row.map(v=>`"${String(v).replace(/"/g,'""')}"`).join(',')).join('\n');
+      const blob = new Blob([csv], {type:'text/csv;charset=utf-8;'});
+      const url = URL.createObjectURL(blob); const a = document.createElement('a');
       a.href = url; a.download = 'mbs_gift_submissions.csv'; document.body.appendChild(a); a.click();
-      setTimeout(()=>{ URL.revokeObjectURL(url); a.remove(); }, 1500);
+      setTimeout(()=>{ URL.revokeObjectURL(url); a.remove(); }, 1200);
     });
-    document.getElementById('clear').addEventListener('click', function(){
-      if(!confirm('Clear all submissions stored in this browser?')) return;
-      localStorage.removeItem('mbs_gifts'); renderTable();
+    document.getElementById('clear').addEventListener('click', ()=>{
+      if(confirm('Clear all submissions in this browser?')){ localStorage.removeItem('mbs_gifts'); render(); }
     });
-    renderTable();
+    render();
   </script>
 </body>
 </html>
