--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
   <!-- Top bar styled like MBS -->
-  <header class="mast">
+    <header class="mast">
     <div class="mast-inner">
       <button class="ghost-btn" aria-label="Menu">≡&nbsp; MENU</button>
       <img class="mark" src="assets/logo.png" alt="MBS mark">
-      <a class="ghost-btn" href="admin.html">ADMIN</a>
+      <span class="ghost-btn" aria-hidden="true" style="visibility:hidden;">&nbsp;</span>
     </div>
   </header>
 
